--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src="bower_components/angular/angular.js"></script>
     </head>
     <body>
+    	yammie
         <div>
             <h3>Welcome to Group 13!!</h3>
         </div>
