--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
     	yammie
-        Added by rakib
+        added by rakib
         <div>
             <h3>Welcome to Group 13!!</h3>
         </div>
