--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     	yammie
         added by rakib
         <div>
-            <h3>Welcome to Group 13!!</h3>
+            <h3>Welcome to Group 13!! Hello my Friends! </h3>
         </div>
     </body>
 </html>
