--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
-<html>
+<html ng-app="agendaBuilderApp">
     <head>
         <title>Agenda Builder|| Group 13</title>
-        <script src="bower_components/angular/angular.js"></script>
+        <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/dragndrop.css">
+        <link rel="stylesheet" href="css/app.css">        
     </head>
     <body>
-    	yammie
-        added by rakib
-        <div>
-            <h3>Welcome to Group 13!!</h3>
+        <div class="container" ng-controller="MainCtrl"> 
+            <div ng-controller="ModalCtrl">
+                <script type="text/ng-template" id="myModalContent.html">
+                    <div class="modal-header">
+                    <h3 class="modal-title">Add New Activity</h3>
+                    </div>
+                    <div class="modal-body">
+                    <ul>
+                    <li ng-repeat="item in items">
+                    <a ng-click="selected.item = item">{{ item }}</a>
+                    </li>
+                    </ul>
+                    Selected: <b>{{ selected.item }}</b>
+                    </div>
+                    <div class="modal-footer">
+                    <button class="btn btn-primary" ng-click="ok()">OK</button>
+                    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+                    </div>
+                </script>
+                <button class="btn btn-default" ng-click="open('sm')">Add Activity</button>
+                <div ng-show="selected">Selection from a modal: {{selected}}</div>
+            </div>
+            <hr>
+            <div ng-controller="DragAndDropCtrl">         
+                <ul class="draggable-objects">
+                    <li  ng-repeat="obj in draggableObjects" >
+                        <div ng-drag="true" ng-drag-data="obj"> {{obj.name}} </div>
+                    </li>
+                </ul>
+                <hr/>
+                <div ng-drop="true" ng-drop-success="onDropComplete1($data,$event)">
+                    <span class="title">Drop area #1</span>
+                    <div ng-repeat="obj in droppedObjects1" ng-drag="true" ng-drag-data="obj" ng-drag-success="onDragSuccess1($data,$event)" ng-center-anchor="{{centerAnchor}}">
+                        {{obj.name}}
+                    </div>
+                </div>
+                <div ng-drop="true" ng-drop-success="onDropComplete2($data,$event)">
+                    <span class="title">Drop area #2</span>
+
+                    <div ng-repeat="obj in droppedObjects2" ng-drag="true" ng-drag-data="obj" ng-drag-success="onDragSuccess2($data,$event)" ng-center-anchor="{{centerAnchor}}">
+                        {{obj.name}}
+                    </div>
+                </div>
+                <hr>
+            </div>
         </div>
+
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+        <script src="bower_components/angular-dragndrop/ngDraggable.js"></script>
+        <script src="js/model.js"></script>
+        <script src="js/services.js"></script>
+        <script src="js/controllers.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
