--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <head>
         <title>Agenda Builder|| Group 13</title>
         <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/ng-sortable.min.css">
-        <link rel="stylesheet" href="css/ng-sortable.style.min.css">
-        <link rel="stylesheet" href="css/board.css">
-        <link rel="stylesheet" href="css/app.css">        
+        <link rel="stylesheet" href="styles/css/ng-sortable.min.css">
+        <link rel="stylesheet" href="styles/css/ng-sortable.style.min.css">
+        <link rel="stylesheet" href="styles/css/board.css">
+        <link rel="stylesheet" href="styles/css/app.css">        
     </head>
     <body>
         <div class="container-fluid" ng-controller="MainCtrl"> 
@@ -68,7 +68,9 @@
                          ng-repeat="day in days"
                          data-columnindex="{{$index}}" id="column{{$index}}">
                         <div class="column">
-                            <div class="columnHeader">  
+                            <div class="columnHeader"> 
+                                <a title="Delete Day" ng-click="removeDay($index)">
+                                    <i class="glyphicon glyphicon-minus deleteDay"></i></a>
                                 <span>Day{{$index+1}}</span>
                                 <span>Start={{day.getStart()}}</span>
                                 <span>End={{day.getEnd()}}</span>
@@ -95,9 +97,9 @@
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="bower_components/angular-sortable/ng-sortable.js"></script>
-        <script src="js/model.js"></script>
-        <script src="js/services.js"></script>
-        <script src="js/controllers.js"></script>
-        <script src="js/app.js"></script>
+        <script src="script/model/model.js"></script>
+        <script src="script/service/services.js"></script>
+        <script src="script/controller//controllers.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
