--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
             </form> 
 
         </div>
-		
+
+        <div id="calendarView">
+            <h3>Calendar</h3>
+            <frame> 
+                <button id="buttonActivity">Add Activity</button>
+                <br>
+               <div id="divActivities"></div>
+            </frame>
+                <div> 
+                    <button id="buttonDay">Add Day</button>
+                    <br>
+                    <div>
+                        <label class="labelsDay">Start Time:</label> <input class="labelsDay" type="text">  </label> 
+                        <br>
+                        <label class="labelsDay">End Time: 00:00 </label> 
+                        <br>        
+                        <label class="labelsDay">Total Time: 00:00 </label>
+                    </div>
+                    <div>
+                        <canvas class="canvasGraph" width="90" height="110"></canvas>
+                    </div>
+                    <div class="divDay"> </div>
+                </div>
+        </div>
     </body>
 </html>
