Correction in  day labels

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                     <button id="buttonDay">Add Day</button>
                     <br>
                     <div>
-                        <label class="labelsDay">Start Time:</label> <input class="labelsDay" type="text">  </label> 
-                        <br>
-                        <label class="labelsDay">End Time: 00:00 </label> 
-                        <br>        
-                        <label class="labelsDay">Total Time: 00:00 </label>
+                        <label class="labelsDay">Start Time:</label> <input class="labelsDay" id="startTime" type="text">  </label> 
+                        <br><br>
+                        <label class="labelsDay">End Time: </label> <label class="labelsDay" id="endTime"> 00:00 </label> 
+                        <br><br>      
+                        <label class="labelsDay">Total Time: </label> <label class="labelsDay" id="duration"> 00:00 </label> 
                     </div>
                     <div>
                         <canvas class="canvasGraph" width="90" height="110"></canvas>
