--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html ng-app="agendaBuilderApp">
     <head>
-        <title>Agenda Builder|| Group 13</title>
+        <title>Agenda Builder|| Beta</title>
         <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles/css/ng-sortable.min.css">
         <link rel="stylesheet" href="styles/css/ng-sortable.style.min.css">
@@ -24,15 +24,16 @@
                     <div class="drag-container col-sm-10">
                         <div class="col-sm-3 col-xs-3"
                              ng-repeat="day in days"
-                             data-columnindex="{{$index}}" id="column{{$index}}">
-                            <div class="column">
-                                <div class="columnHeader"> 
+                             data-columnindex="{{$index}}" id="column{{$index}}">                           
+                            <div class="column">                                
+                                <div ng-model="day._stacked" class="columnHeader">                                    
+                                    <progress ng-show="checkGraphicaLength($index) > 0"><bar title="{{bar.type}}" ng-repeat="bar in day._stacked track by $index" value="bar.value" type="{{bar.type}}"><span ng-hide="bar.value < 5">{{bar.value}}%</span></bar></progress>
                                     <a title="Delete Day" ng-click="removeDay($index)">
                                         <i class="glyphicon glyphicon-remove-sign deleteDay"></i></a>
                                     <span>Day{{$index + 1}}</span>
                                     <span>Start={{day.getStart()}}</span>
                                     <span>End={{day.getEnd()}}</span>
-                                    <span>Total={{day.getTotalLength()}}Min</span>                                
+                                    <span>Total={{day.getTotalLength()}}Min</span>                                   
                                 </div>
                                 <ul class="cards card-list" as-sortable="sortOptionListener" ng-model="day._activities">
                                     <li style="background:{{item.getColor()}}" class="card" ng-repeat="item in day._activities" data-as-sortable-item ng-include="'views/partials/activity.html'">                                    
@@ -41,12 +42,12 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
 
         <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
         <script src="bower_components/angular-sortable/ng-sortable.js"></script>
         <script src="scripts/model/model.js"></script>
