Added timepicker. user can set the time in-fly for each day.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                                     <progress class="sample-show-hide" ng-show="checkGraphicaLength($index) > 0"><bar tooltip="{{bar.label}}" ng-repeat="bar in day._stacked track by $index" value="bar.value" type="{{bar.type}}"><span ng-hide="bar.value < 5">{{bar.value}}%</span></bar></progress>
                                     <a title="Delete Day" ng-click="removeDay($index)">
                                         <i class="glyphicon glyphicon-remove-sign deleteDay"></i></a>
+                                    <div ng-controller="TimepickerDemoCtrl"><timepicker ng-model="mytime" ng-change="changed($index)" hour-step="hstep" minute-step="mstep" show-meridian="false"></timepicker></div>                                                        
                                     <p><span>Day {{$index + 1}}</span></p>
                                     <span>Start={{day.getStart()}}</span>
                                     <span>End={{day.getEnd()}}</span>
