--- a/index.html
+++ b/index.html
@@ -31,17 +31,12 @@
                                     <progress ng-show="checkGraphicaLength($index) > 0"><bar title="{{bar.type}}" ng-repeat="bar in day._stacked track by $index" value="bar.value" type="{{bar.type}}"><span ng-hide="bar.value < 5">{{bar.value}}%</span></bar></progress>
                                     <a title="Delete Day" ng-click="removeDay($index)">
                                         <i class="glyphicon glyphicon-remove-sign deleteDay"></i></a>
-                                    <p><span>Day {{$index + 1}}</span></p>
-<<<<<<< HEAD
-                                    <span>Start Time: {{day.getStart()}}</span><br/>
-                                    <span>End Time: {{day.getEnd()}}</span><br/>
-                                    <span>Total Length: {{day.getTotalLength()}} Min</span>          
-=======
-                                    <p align="left"><span>Start: {{day.getStart()}}</span></p>
-                                    <p align="left"><span>End: {{day.getEnd()}}</span></p>
-                                   <p> <span>Total: {{day.getTotalLength()}}Min</span></p>                              
+                                    <p><span>Day {{$index + 1}}</span></p>       
+                                    <p align="left"><span>Start Time: {{day.getStart()}}</span></p>
+                                    <p align="left"><span>End Time: {{day.getEnd()}}</span></p>
+                                   <p> <span>Total Length: {{day.getTotalLength()}}Min</span></p>                              
 
->>>>>>> origin/development
+
                                 </div>
                                 <ul class="cards card-list" as-sortable="sortOptionListener" ng-model="day._activities">
                                     <li style="background:{{item.getColor()}}" class="card" ng-repeat="item in day._activities" data-as-sortable-item ng-include="'views/partials/activity.html'">                                    
