--- a/newhtml.html
+++ b/newhtml.html
@@ -1,5 +1,5 @@
-<div ng-controller="ModalCtrl">
-    <script type="text/ng-template" id="myModalContent.html">
+<div ng-controller="MainCtrl">
+    <script type="text/ng-template" id="myTaskviewContent.html">
         <div class="modal-header">
         <h3 class="modal-title">Add New Activity</h3>
         </div>
@@ -26,6 +26,5 @@
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
     </script>  
-    <button class="btn btn-primary" ng-click="open1('sm')">Add Activity</button>
-    <button class="btn btn-add-day" ng-click="addDay()">Add Day</button>
+    
 </div> <!--end of popup modal controller-->
