Consistency in order and format of data in activities

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     <p><span>Day {{$index + 1}}</span></p>       
                                     <p><span>Start Time: {{day.getStart()}}</span><br/>
                                     <span>End Time: {{day.getEnd()}}</span><br/>
-                                    <span>Total Length: {{day.getTotalLength()}}Min</span></p>                              
+                                    <span>Total Length: {{day.getTotalLength()}} min</span></p>                              
                                 </div>
                                 <ul class="cards card-list" as-sortable="sortOptionListener" ng-model="day._activities">
                                     <li style="background:{{item.getColor()}}" class="card" ng-repeat="item in day._activities" data-as-sortable-item ng-include="'views/partials/activity.html'">                                    
